# loopedLMs

./: .gitignore  README.md  plan.md
qwen_loop_study/: GUIDE.md  README.md  pyproject.toml
qwen_loop_study/configs/grpo/: grpo_dense_0p5b.yaml  grpo_dense_1p5b.yaml  grpo_looped_0p5b.yaml  grpo_looped_1p5b.yaml
qwen_loop_study/configs/recovery/: recover_dense_0p5b.yaml  recover_dense_1p5b.yaml  recover_looped_0p5b.yaml  recover_looped_1p5b.yaml
qwen_loop_study/configs/sft/: sft_dense_0p5b.yaml  sft_dense_1p5b.yaml  sft_looped_0p5b.yaml  sft_looped_1p5b.yaml
qwen_loop_study/lockfiles/: gpu.txt  local-smoke.txt
qwen_loop_study/reports/: qwen_looplm_math_study.md
qwen_loop_study/src/qwen_loop_study/: __init__.py  compat.py  config.py  tracking.py
qwen_loop_study/src/qwen_loop_study/training/: __init__.py  common.py  grpo.py  recover.py  sft.py
qwen_loop_study/tests/: conftest.py
qwen_loop_study/tests/integration/: test_workflows.py
qwen_loop_study/tests/unit/: test_looped_qwen.py  test_rewards.py
