[project]
name = "qwen-loop-study"
version = "0.1.0"
description = "Qwen-only looped-vs-dense math reasoning study scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.3.0",
  "datasets>=3.0.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "pyyaml>=6.0.2",
  "torch>=2.6.0",
  "transformers>=4.55.0",
  "trl>=0.14.0",
]

[project.optional-dependencies]
eval = [
  "math-verify[antlr4_13_2]>=0.7.0",
  "lighteval>=0.8.0",
]
tracking = [
  "wandb>=0.17.0",
]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
qwen-loop-build-splits = "qwen_loop_study.data.build_splits:main"
qwen-loop-recover = "qwen_loop_study.training.recover:main"
qwen-loop-sft = "qwen_loop_study.training.sft:main"
qwen-loop-grpo = "qwen_loop_study.training.grpo:main"
qwen-loop-eval = "qwen_loop_study.eval.run_eval:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
